Return whole new task on post addtask.
